Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
.applicationlogo a:hover {
	background-position: 30px 20px;
}

.relationMarkupFrame {
	#display: inline-block;
	max-width: 100%;
	border-right: 0px;
	border-left: 0px;
	border-bottom: 0px;
	border-right: 1px solid white;
	border-left: 1px solid white;
	border-bottom: 1px solid white;
}

.drophover {
	border-style: solid;
	border-width: 2px;
	border-color: #CCCCCC;
	border-radius: 10px 10px 10px 10px;
}

.wissassTable {
	
}

@media screen, projection {
	.relationMarkupFrame:hover {
		border-right: 1px solid #DDD;
		border-left: 1px solid #DDD;
		border-bottom: 1px solid #DDD;
		background-color: #F9F9F9;
	}
}

.relationMarkupFrame > .relationMarkup .markupText {
	#padding-right: 120px;
}


.relationMarkupFrame > .relationMarkup {
	background-color: transparent;
	border-right: 0px;
	border-left: 0px;
	border-bottom: 0px;
}

.relationMarkupContent {
	display: inline;	
}


.termbrowserheader {
	border-bottom-style: solid;
    border-bottom-width: 1px;
    font-weight: bold;
    margin-bottom: 5px;
    padding-bottom: 5px;
}
	
.termbrowserframe {
	border-style: solid;
	border-width: 2px;
	border-color: #CCCCCC;
	background-color: ##F9F9F0;
	padding: 6px;
	border-radius: 10px 10px 10px 10px;
}

.termlist {
	border-top-style: solid;
    border-top-width: 1px;
	margin-top: 5px;
	padding-top: 10px;
}

.zebraline {
	
}
	
.zebraline:hover {
	background-color: #DDDDDD;
}
	
.zebraline-white {
	background-color: #FFFFFF;
}
	
.zebraline-white:hover {
	background-color: #DDDDDD;
}
	
td.termbrowser {
	padding: 0;
	overflow: hidden;
}
	
.termname{
	cursor: pointer;
}
	

.openConcept, .expandConcept, .removeConcept, .deleteButton {
cursor: pointer;
}

.termgraph{
	border-style: solid;
	border-width: 2px;	
	border-color: #CCCCCC;
	border-radius: 10px 10px 10px 10px;
}

.termgraphHeader{
	padding: 5px;
}

.parentBreadcrumb {
	font-size: 75%;
	border-bottom: 1px solid lightgrey;
	}
	
.deletableListElement {
	display: inline;	
}

.narrowCell {
padding:0px;
}	

